--- a/app/templates/blog-item.html
+++ b/app/templates/blog-item.html
@@ -8,22 +8,22 @@
     <title>Blog Single</title>
     
     <!-- core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/prettyPhoto.css" rel="stylesheet">
-    <link href="css/animate.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
-    <link href="css/responsive.css" rel="stylesheet">
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/font-awesome.min.css" rel="stylesheet">
+    <link href="static/css/prettyPhoto.css" rel="stylesheet">
+    <link href="static/css/animate.min.css" rel="stylesheet">
+    <link href="static/css/main.css" rel="stylesheet">
+    <link href="static/css/responsive.css" rel="stylesheet">
     
     <!--[if lt IE 9]>
-    <script src="js/html5shiv.js"></script>
-    <script src="js/respond.min.js"></script>
+    <script src="static/js/html5shiv.js"></script>
+    <script src="static/js/respond.min.js"></script>
     <![endif]-->       
-    <link rel="shortcut icon" href="images/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="static/images/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="static/images/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="static/images/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="static/images/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="static/images/ico/apple-touch-icon-57-precomposed.png">
 </head><!--/head-->
 
 <body>
@@ -65,7 +65,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+                    <a class="navbar-brand" href="index.html"><img src="static/images/logo.png" alt="logo"></a>
                 </div>
                 
                 <div class="collapse navbar-collapse navbar-right">
@@ -103,7 +103,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="blog-item">
-                        <img class="img-responsive img-blog" src="images/blog/blog1.jpg" width="100%" alt="" />
+                        <img class="img-responsive img-blog" src="static/images/blog/blog1.jpg" width="100%" alt="" />
                             <div class="row">  
                                 <div class="col-xs-12 col-sm-2 text-center">
                                     <div class="entry-meta">
@@ -129,7 +129,7 @@
                         
                         <div class="media reply_section">
                             <div class="pull-left post_reply text-center">
-                                <a href="#"><img src="images/blog/boy.png" class="img-circle" alt="" /></a>
+                                <a href="#"><img src="static/images/blog/boy.png" class="img-circle" alt="" /></a>
                                 <ul>
                                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -146,7 +146,7 @@
                         <h1 id="comments_title">5 Comments</h1>
                         <div class="media comment_section">
                             <div class="pull-left post_comments">
-                                <a href="#"><img src="images/blog/girl.png" class="img-circle" alt="" /></a>
+                                <a href="#"><img src="static/images/blog/girl.png" class="img-circle" alt="" /></a>
                             </div>
                             <div class="media-body post_reply_comments">
                                 <h3>Marsh</h3>
@@ -157,7 +157,7 @@
                         </div> 
                         <div class="media comment_section">
                             <div class="pull-left post_comments">
-                                <a href="#"><img src="images/blog/boy2.png" class="img-circle" alt="" /></a>
+                                <a href="#"><img src="static/images/blog/boy2.png" class="img-circle" alt="" /></a>
                             </div>
                             <div class="media-body post_reply_comments">
                                 <h3>Marsh</h3>
@@ -168,7 +168,7 @@
                         </div> 
                         <div class="media comment_section">
                             <div class="pull-left post_comments">
-                                <a href="#"><img src="images/blog/boy3.png" class="img-circle" alt="" /></a>
+                                <a href="#"><img src="static/images/blog/boy3.png" class="img-circle" alt="" /></a>
                             </div>
                             <div class="media-body post_reply_comments">
                                 <h3>Marsh</h3>
@@ -228,21 +228,21 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="single_comments">
-    								<img src="images/blog/avatar3.png" alt=""  />
+    								<img src="static/images/blog/avatar3.png" alt=""  />
     								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do </p>
                                     <div class="entry-meta small muted">
                                         <span>By <a href="#">Alex</a></span ><span>On <a href="#">Creative</a></span>
                                     </div>
     							</div>
     							<div class="single_comments">
-    								<img src="images/blog/avatar3.png" alt=""  />
+    								<img src="static/images/blog/avatar3.png" alt=""  />
     								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do </p>
     								<div class="entry-meta small muted">
                                         <span>By <a href="#">Alex</a></span ><span>On <a href="#">Creative</a></span>
                                     </div>
     							</div>
     							<div class="single_comments">
-    								<img src="images/blog/avatar3.png" alt=""  />
+    								<img src="static/images/blog/avatar3.png" alt=""  />
     								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do </p>
     								<div class="entry-meta small muted">
                                         <span>By <a href="#">Alex</a></span ><span>On <a href="#">Creative</a></span>
@@ -301,12 +301,12 @@
     				<div class="widget blog_gallery">
                         <h3>Our Gallery</h3>
                         <ul class="sidebar-gallery">
-                            <li><a href="#"><img src="images/blog/gallery1.png" alt="" /></a></li>
-                            <li><a href="#"><img src="images/blog/gallery2.png" alt="" /></a></li>
-                            <li><a href="#"><img src="images/blog/gallery3.png" alt="" /></a></li>
-                            <li><a href="#"><img src="images/blog/gallery4.png" alt="" /></a></li>
-                            <li><a href="#"><img src="images/blog/gallery5.png" alt="" /></a></li>
-                            <li><a href="#"><img src="images/blog/gallery6.png" alt="" /></a></li>
+                            <li><a href="#"><img src="static/images/blog/gallery1.png" alt="" /></a></li>
+                            <li><a href="#"><img src="static/images/blog/gallery2.png" alt="" /></a></li>
+                            <li><a href="#"><img src="static/images/blog/gallery3.png" alt="" /></a></li>
+                            <li><a href="#"><img src="static/images/blog/gallery4.png" alt="" /></a></li>
+                            <li><a href="#"><img src="static/images/blog/gallery5.png" alt="" /></a></li>
+                            <li><a href="#"><img src="static/images/blog/gallery6.png" alt="" /></a></li>
                         </ul>
                     </div><!--/.blog_gallery-->
     					
@@ -405,10 +405,10 @@
     </footer><!--/#footer-->
 
     <script src="http://apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.prettyPhoto.js"></script>
-    <script src="js/jquery.isotope.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/wow.min.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
+    <script src="static/js/jquery.prettyPhoto.js"></script>
+    <script src="static/js/jquery.isotope.min.js"></script>
+    <script src="static/js/main.js"></script>
+    <script src="static/js/wow.min.js"></script>
 </body>
 </html>
